# dunetrigger

./: .gitignore  .gitmodules  CMakeLists.txt  create_cmakelists.sh  replace_triggeralgs.sh
docs/: README.md
dunetrigger/: CMakeLists.txt
dunetrigger/TriggerSim/: CMakeLists.txt  TriggerActivityMakerOnlineTPC_module.cc  TriggerActivityMakerTPC_module.cc  TriggerCandidateMakerOnlineTPC_module.cc  TriggerCandidateMakerTPC_module.cc  TriggerPrimitiveMakerTPC_module.cc  TriggerSimCommon.hh  TriggerTPCInfoComparator_module.cc  TriggerTPCInfoDisplay_module.cc  Verbosity.hh  triggersim_modules.fcl
dunetrigger/TriggerSim/TAAlgTools/: CMakeLists.txt  TAAlgTPCADCSimpleWindow.hh  TAAlgTPCADCSimpleWindow_tool.cc  TAAlgTPCExample.hh  TAAlgTPCExample_tool.cc  TAAlgTPCOnline.hh  TAAlgTPCOnline_tool.cc  TAAlgTPCTool.hh  TPWindow.hh
dunetrigger/TriggerSim/TCAlgTools/: CMakeLists.txt  TCAlgTPCExample.hh  TCAlgTPCExample_tool.cc  TCAlgTPCOnline.hh  TCAlgTPCOnline_tool.cc  TCAlgTPCTool.hh
dunetrigger/TriggerSim/TPAlgTools/: CMakeLists.txt  TPAlgTPCExample.hh  TPAlgTPCExample_tool.cc  TPAlgTPCSimpleThreshold.hh  TPAlgTPCSimpleThreshold_tool.cc  TPAlgTPCTool.hh
example/: generate_events.sh  run_offlineTriggerTPCInfoDisplay.fcl  run_pdhd_tpc_decoder.fcl  run_taalg.fcl  run_taalg_online.fcl  run_tcalg_online.fcl  run_tpalg.fcl  run_tpalgST_taalg_tcalg.fcl  run_tpalg_taalg_tcalg.fcl  run_tpalg_taalg_tcalg_online_ADCSimpleWindow.fcl  run_tpalg_taalg_tcalg_online_ChannelAdjacency.fcl  run_triggerTPCInfoComparator.fcl  run_triggerTPCInfoDisplay.fcl  run_triggersim_fd.fcl  (+3 more)
(+9 files in other folders)
